--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.15",
+    "axios": "^1.4.0",
     "formik": "^2.4.2",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
