--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "phone-mate",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://GoodPointt.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://GoodPointt.github.io/Phone-Mate/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
